<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrayLight"
    tools:context=".View.AddStudentActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/margin_padding_size_large"
            android:paddingTop="@dimen/margin_padding_size_large"
            android:paddingRight="@dimen/margin_padding_size_medium"
            android:paddingLeft="@dimen/margin_padding_size_medium">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tip_code_student"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_code_student"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_code_student" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tip_fullname_student"
                android:layout_marginTop="@dimen/margin_padding_size_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tip_code_student">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_fullname_student" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/ln_birthday"
                android:layout_below="@id/tip_fullname_student"
                android:layout_marginTop="@dimen/margin_padding_size_small"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:weightSum="4"
                    android:id="@+id/tip_birthday_student"
                    android:layout_weight="8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_birthday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:enabled="false"
                        android:hint="@string/text_birthday_student" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/btn_add_birthday"
                    android:layout_gravity="center"
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/margin_padding_size_medium"
                    android:scaleType="fitCenter"
                    android:background="@android:color/white"
                    android:src="@drawable/calendar">

                </ImageButton>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ln_gender"
                android:layout_marginTop="@dimen/margin_padding_size_small"
                android:layout_below="@id/ln_birthday"
                android:orientation="horizontal"
                android:weightSum="10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tip_address_student"
                android:layout_weight="7"
                android:layout_marginRight="@dimen/margin_padding_size_small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/ln_birthday">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_address_student" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spn_gender"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:layout_width="50dp"
                android:layout_height="wrap_content" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/ln_add_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_padding_size_medium"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnAddStudent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/btn_add_student"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnClearStudent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/btn_clear_student"
            android:textColor="@android:color/white" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>